--- a/index.html
+++ b/index.html
@@ -5,32 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Perfume
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container">
+    <header>
+      <picture>
+        <source media="(min-width: 580px)" srcset="./images/image-product-desktop.jpg">
+        <source srcset="./images/image-product-mobile.jpg">
+        <img class="img__header" src="./images/image-product-mobile.jpg" alt="perfume_gabrielle-essence">
+      </picture>
+    </header>
+    <main id="product-description">
+      <div class="product-description__main-content">
+        <h2 class="product-description__product">Perfume</h2>
+        <h1 class="product-description__product-name">Gabrielle Essence Eau De Parfum</h1>
+        <p class="product-description__description"> A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+          Perfumer-Creator for the House of CHANEL.</p>
+        <p class="product-description__price">
+          <span class="product-price__discounted-price">$149.99</span>
+          <span class="product-price__old-price">$169.99</span>
+        </p>
+      </div>
+      
+     
+      <button class="btn-add-cart">
+        Add to Cart
+      </button>
+    </main>
   </div>
+  
 </body>
 </html>
